Add 2 endpoints: get categories and get stock by product id
