# src/routes.js
@@ -13,6 +13,8 @@ router.post('/products', ProductController.store);
 router.get('/products', ProductController.index);
 router.delete('/products/:id', ProductController.delete);
 router.put('/products/:id', ProductController.update);
+router.get('/products/stock/:id', ProductController.getStock);
+router.get('/products/categories', ProductController.getCategories);
 
 router.post('/users', ClientController.store);
 router.post('/users/login', ClientController.login);
